--- a/gosuslugi/order.html
+++ b/gosuslugi/order.html
@@ -163,27 +163,28 @@
     <section class="order_container" id="order"> 
       <div class="first_row">
           <div class="row">
-            <div class="col-8 text-gosulugi">
+            <div class="img-gosuslugi img-center"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 text-gosulugi">
               <span>Оформление ордера на производство земляных работ</span>
               <p>Выдавать ордера на производство земляных, ремонтных и отдельных работ, связанных с благоустройством территории Санкт-Петербурга.</p>
               <p>Уникальный реестровый номер: 7800000010000086650</p>
             </div>
 
-            <div class="col-4 img-flex">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 img-flex">
               <div class="img-gosuslugi img-right"></div>
             </div>
           </div>
           <div class="row button_row">
-            <div class="col-3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
               <a href="https://public.pob.adc.spb.ru/map?layers=orders_active" target="_blank" class="btn-gosuslugi">Картографический сервис</a>
             </div>
-            <div class="col-3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
               <a href="" class="btn-gosuslugi">Реестр ордеров</a>
             </div>
-            <div class="col-3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
               <a href="https://gu.spb.ru/188573/eservice/" target="_blank" class="btn-gosuslugi">Получить услугу</a>
             </div>
-            <div class="col-3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
               <a href="" class="btn-gosuslugi">Информационные материалы</a>
             </div>
           </div>
@@ -193,10 +194,11 @@
     <section class="order_container_white" id="adres">
       <div class="second_row">
         <div class="row">
-          <div class="col-4 img-flex">
+          <div class="img-gosuslugi img-center"></div>
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 img-flex">
             <div class="img-gosuslugi img-left"></div>
           </div>
-          <div class="col-8 text-gosulugi">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 text-gosulugi">
             <span>Включение работ в адресную программу</span>
             <p>Формировать и согласовывать в порядке, установленном Правительством Санкт-Петербурга, перспективной и оперативной адресной программы земляных, ремонтных и отдельных работ, связанных с благоустройством территории Санкт-Петербурга.</p>
             <p>Уникальный реестровый номер: 7800000010000059751</p>
@@ -204,16 +206,16 @@
         </div>
 
         <div class="row button_row"> 
-          <div class="col-3">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
             <a href="" class="btn-gosuslugi">Картографический сервис</a>
           </div>
-          <div class="col-3">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
             <a href="" class="btn-gosuslugi">Реестр адресных программ</a>
           </div>
-          <div class="col-3">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
             <a href="https://gu.spb.ru/188913/eservice/" class="btn-gosuslugi">Получить услугу</a>
           </div>
-          <div class="col-3">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
             <a href="" class="btn-gosuslugi">Информационные материалы</a>
           </div>
         </div>
@@ -223,24 +225,25 @@
     <section class="order_container" id="ogran">
       <div class="third_row">
           <div class="row">
-            <div class="col-8 text-gosulugi">
+            <div class="img-gosuslugi img-center"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 text-gosulugi">
               <span>Оформление распоряжения об ограничении движения</span>
               <p>Принимать решения о временных ограничении или прекращении движения транспортных средств по автомобильным дорогам регионального значения в Санкт-Петербурге по основаниям, установленным в Подпункте 1 Пункта 1 и Подпункте 6 Пункта 2 Статьи 2 Закона Санкт-Петербурга от 29.06.2011 №434-89 «О временных ограничении или прекращении движения транспортных средств по автомобильным дорогам в Санкт-Петербурге и внесении изменений в Закон Санкт-Петербурга «Об административных правонарушениях в Санкт-Петербурге».</p>
               <p>Уникальный реестровый номер: 7800000010000009193</p>
             </div>
 
-            <div class="col-4 img-flex">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 img-flex">
               <div class="img-gosuslugi img-right"></div>
             </div>
           </div>
           <div class="row button_row">
-            <div class="col-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
               <a href="" class="btn-gosuslugi">Картографический сервис</a>
             </div>
-            <div class="col-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
               <a href="https://gu.spb.ru/188419/eservice/" class="btn-gosuslugi">Получить услугу</a>
             </div>
-            <div class="col-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
               <a href="" class="btn-gosuslugi">Информационные материалы</a>
             </div>
           </div>
@@ -250,23 +253,24 @@
     <section class="order_container_white" id="avariya">
       <div class="fourth_row">
           <div class="row">
-            <div class="col-4 img-flex">
+            <div class="img-gosuslugi img-center"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 img-flex">
               <div class="img-gosuslugi img-left"></div>
             </div>
-            <div class="col-8 text-gosulugi">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 text-gosulugi">
               <span>Доступ к кабинету владельца инженерных сетей и иных объектов</span>
               <p>Регистрировать в «Личном кабинете» на сайте Государственной административно-технической инспекции <a href="../index.html">gati-online.ru</a> владельцев инженерных коммуникаций, иных объектов, при повреждении которых возникает необходимость производства аварийных работ.</p>
               <p>Уникальный реестровый номер: 7800000000168946950</p>
             </div>
           </div>
           <div class="row button_row">
-            <div class="col-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
               <a href="https://public.pob.adc.spb.ru/map?layers=notifications_active" target="_blank" class="btn-gosuslugi">Картографический сервис</a>
             </div>
-            <div class="col-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
               <a href="https://gu.spb.ru/602053/traditional/" target="_blank" class="btn-gosuslugi">Получить услугу</a>
             </div>
-            <div class="col-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
               <a href="http://gati-online.ru/p_av.pdf" target="_blank" class="btn-gosuslugi">Информационные материалы</a>
             </div>
           </div>
