--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <nav class="menu__body">
           <ul class="menu__list">
-            <li class="link_active"><a href="" class="menu__link">Главная</a></li>
+            <li class=""><a href="../index.html" class="menu__link">Главная</a></li>
             <li class="drop__link">
               <span class="menu__link">Инспекция</span>
               <span class="menu__arrow"></span>
@@ -47,12 +47,13 @@
                 <li><a class="menu__sub-link" href="https://www.gov.spb.ru/gov/otrasl/inspek/information/polnomoch/">Полномочия, задачи, услуги и функции ГАТИ</a></li>
                 <li><a class="menu__sub-link" href="https://www.gov.spb.ru/gov/otrasl/inspek/svedenija-o-rukovoditeljah/" target="_blank">Руководство Инспекции</a></li>
                 <li class="divider-new"><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=144&Itemid=170">Кадры</a></li>
+                <li class="divider-new"><a class="menu__sub-link" href="docs/reg258.pdf">Реквизиты</a></li>
+                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=120&Itemid=137">Соглашения о Межведомственном взаимодействии</a></li>
                 <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=143&Itemid=166">Обжалование Гос. услуг</a></li>
                 <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=1047&Itemid=170">Антимонопольное законодательство</a></li>
                 <li class="divider-new"><a class="menu__sub-link" href="https://www.gov.spb.ru/gov/otrasl/inspek/protivodejstvie-korrupcii/" target="_blank">Противодействие коррупции</a></li>
                 <li><a class="menu__sub-link" href="index.php?option=com_content&view=category&layout=blog&id=50&Itemid=183">Новости</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=category&layout=blog&id=51&Itemid=181">Мероприятия</a></li>
-                <li class="divider-new"><a class="menu__sub-link" href="/index.php?option=com_content&view=article&id=64&Itemid=100">Методические материалы и образцы документов</a></li>
+                <li class="divider-new"><a class="menu__sub-link" href="index.php?option=com_content&view=category&layout=blog&id=51&Itemid=181">Мероприятия</a></li>
                 <!--
                 <? $user =&JFactory::getUser();
                 if (($user->username=='pressa'))
@@ -92,28 +93,24 @@
               <ul class="menu__sub-list">
                 <li><a class="menu__sub-link" href="index.php?option=com_quickfaq&view=category&cid=1&Itemid=114">Информация ГАТИ об ограничениях движения</a></li>
                 <li><a class="menu__sub-link" href="index.php?option=com_quickfaq&view=category&cid=2&Itemid=184">Ограничения движения на КАД</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=1384">Ограничения движения в рамках содержания а/д</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=132&Itemid=83">Перечень рассматриваемых административных дел</a></li>               
+                <li class="divider-new"><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=1384">Ограничения движения в рамках содержания а/д</a></li>
+                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=132&Itemid=83">Перечень рассматриваемых административных дел</a></li> 
+                <li class="divider-new"><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=54&Itemid=81">Ход рассмотрения дел об огранич. движения</a></li>             
                 <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=226&Itemid=146">	Общественное обсуждение проектов документов стратегического планирования Санкт-Петербурга</a></li>
                 <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=116&Itemid=146">Проекты НПА и административных регламентов</a></li>
                 <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=455&Itemid=201">Законодательство</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=1100&Itemid=201">Общественный совет при Инспекции</a></li>               
-                <li><a class="menu__sub-link" href="docs/reg258.pdf">Реквизиты</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=117&Itemid=136">Семинары. Материалы</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=120&Itemid=137">Соглашения о Межведомственном взаимодействии</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=342&Itemid=139">Описание формата паспорта проекта (.PSP)</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=325&Itemid=196">Взаимодействие при присоединении к энергосетям</a></li>
-                <li><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=271&Itemid=199">Взаимодействие при присоединении к инженерным сетям</a></li>
+                <li class="divider-new"><a class="menu__sub-link" href="index.php?option=com_content&view=article&id=1100&Itemid=201">Общественный совет при Инспекции</a></li>               
+                <li><a class="menu__sub-link" href="/index.php?option=com_content&view=article&id=64&Itemid=100">Методические рекомендации и образцы документов</a></li>
               </ul>
             </li>
             <li class="drop__link">
-              <span class="menu__link">Гос. услуги</span>
+              <span class="menu__link link_active">Гос. услуги</span>
               <span class="menu__arrow"></span>
               <ul class="menu__sub-list">
-                <li><a class="menu__sub-link" href="./gosuslugi/order.html#order">Оформление ордера на производство земляных работ</a></li>
-                <li><a class="menu__sub-link" href="./gosuslugi/order.html#adres">Включение работ в адресную программу</a></li>
-                <li><a class="menu__sub-link" href="./gosuslugi/order.html#ogran">Оформление распоряжения об ограничении движения</a></li>
-                <li><a class="menu__sub-link" href="./gosuslugi/order.html#avariya">Доступ к кабинету владельца инженерных сетей и иных объектов</a></li>
+                <li><a class="menu__sub-link" href="#order">Оформление ордера на производство земляных работ</a></li>
+                <li><a class="menu__sub-link" href="#adres">Включение работ в адресную программу</a></li>
+                <li><a class="menu__sub-link" href="#ogran">Оформление распоряжения об ограничении движения</a></li>
+                <li><a class="menu__sub-link" href="#avariya">Доступ к кабинету владельца инженерных сетей и иных объектов</a></li>
               </ul>
             </li>
             <li class="drop__link">
@@ -206,7 +203,7 @@
 
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
                 <div class="sliderban_1">
-                  <div class="slider _three"><a href="#"></a>
+                  <div class="slider _three" onclick="window.location='./gosuslugi/order.html#order'">
                       <div class="sl">
                           <div class="sl-text"></div>
                           <div class="sl_h1">
@@ -214,7 +211,7 @@
                           </div>
                       </div>    
                   </div>
-                  <div class="slider _one"><a href="#"></a>
+                  <div class="slider _one" onclick="window.location='./gosuslugi/order.html#adres'">
                       <div class="sl">
                           <div class="sl-text"></div>
                           <div class="sl_h1">
@@ -222,7 +219,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="slider _two"><a href="#"></a>
+                  <div class="slider _two" onclick="window.location='./gosuslugi/order.html#ogran'">
                       <div class="sl">
                           <div class="sl-text"></div>
                           <div class="sl_h1">
@@ -230,12 +227,20 @@
                           </div>
                       </div>
                   </div>
+                  <div class="slider _three" onclick="window.location='./gosuslugi/order.html#avariya'">
+                    <div class="sl">
+                        <div class="sl-text"></div>
+                        <div class="sl_h1">
+                            <span>Кабинет владельца инженерных сетей</span>
+                        </div>
+                    </div>
+                </div>
                 </div>
               </div>
 
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
                 <div class="sliderban_1 slide_two">
-                  <div class="slider _one"><a href="#"></a>
+                  <div class="slider _one" onclick="window.location='index.php?option=com_content&view=article&id=54&Itemid=81'">
                       <div class="sl">
                           <div class="sl-text_1"></div>
                           <div class="sl_h1">
@@ -243,7 +248,7 @@
                           </div>
                       </div>    
                   </div>
-                  <div class="slider _two"><a href="#"></a>
+                  <div class="slider _two" onclick="window.location='index.php?option=com_wrapper&view=wrapper&Itemid=82'">
                       <div class="sl">
                           <div class="sl-text_1"></div>
                           <div class="sl_h1">
@@ -251,7 +256,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="slider _three"><a href="#"></a>
+                  <div class="slider _three" onclick="window.location='index.php?option=com_content&view=article&id=132&Itemid=83'">
                       <div class="sl">
                           <div class="sl-text_1"></div>
                           <div class="sl_h1">
@@ -259,7 +264,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="slider _one"><a href="#"></a>
+                  <div class="slider _one" onclick="window.location=''">
                       <div class="sl">
                           <div class="sl-text_1"></div>
                           <div class="sl_h1">
@@ -267,7 +272,7 @@
                           </div>
                       </div>    
                   </div>
-                  <div class="slider _two"><a href="#"></a>
+                  <div class="slider _two" onclick="window.location='http://xc.gati-online.ru/hs/?ent=y'">
                       <div class="sl">
                           <div class="sl-text_1"></div>
                           <div class="sl_h1">
@@ -275,7 +280,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="slider _three"><a href="#"></a>
+                  <div class="slider _three" onclick="window.location='http://www.gati-online.ru/opendata/'" >
                       <div class="sl">
                           <div class="sl-text_1"></div>
                           <div class="sl_h1">
@@ -283,7 +288,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="slider _one"><a href="#"></a>
+                  <div class="slider _two" onclick="window.location='http://xc.gati-online.ru/gpr/chart.php'">
                     <div class="sl">
                         <div class="sl-text_1"></div>
                         <div class="sl_h1">
