--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
               <span class="menu__link link_active">Гос. услуги</span>
               <span class="menu__arrow"></span>
               <ul class="menu__sub-list">
-                <li><a class="menu__sub-link" href="#order">Оформление ордера на производство земляных работ</a></li>
-                <li><a class="menu__sub-link" href="#adres">Включение работ в адресную программу</a></li>
-                <li><a class="menu__sub-link" href="#ogran">Оформление распоряжения об ограничении движения</a></li>
-                <li><a class="menu__sub-link" href="#avariya">Доступ к кабинету владельца инженерных сетей и иных объектов</a></li>
+                <li><a class="menu__sub-link" href="./gosuslugi/order.html#order">Оформление ордера на производство земляных работ</a></li>
+                <li><a class="menu__sub-link" href="./gosuslugi/order.html#adres">Включение работ в адресную программу</a></li>
+                <li><a class="menu__sub-link" href="./gosuslugi/order.html#ogran">Оформление распоряжения об ограничении движения</a></li>
+                <li><a class="menu__sub-link" href="./gosuslugi/order.html#avariya">Доступ к кабинету владельца инженерных сетей и иных объектов</a></li>
               </ul>
             </li>
             <li class="drop__link">
