--- a/gosuslugi/order.html
+++ b/gosuslugi/order.html
@@ -39,7 +39,7 @@
         </div>
         <nav class="menu__body">
           <ul class="menu__list">
-            <li class=""><a href="../test_index.html" class="menu__link">Главная</a></li>
+            <li class=""><a href="../test_index.html" class="menu__link main_link">Главная</a></li>
             <li class="drop__link">
               <span class="menu__link">Инспекция</span>
               <span class="menu__arrow"></span>
@@ -196,20 +196,20 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/docs/pravila.doc">Постановление Правительства Санкт-Петербурга от 06.10.2016 № 875</a></li>
-                  <li><a href="http://gati-online.ru/docs/reg121.doc">Административный регламент</a></li>
-                  <li><a href="http://xc.gati-online.ru/hs/z/zod2.php">Заявка</a></li>
-                  <li><a href="http://gati-online.ru/docs/com/5.5.pdf">Как создать PSP файл (сайт РГИС)</a></li>
-                  <li><a href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
-                  <li><a href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
-                  <li><a href="http://gati-online.ru/docs/z_s.doc">Согласование производства работ (владельцем)</a></li>
+                  <li><a class="info_ul_href" href="http://gati-online.ru/docs/pravila.doc">Постановление Правительства Санкт-Петербурга от 06.10.2016 № 875</a></li>
+                  <li><a class="info_ul_href" href="http://gati-online.ru/docs/reg121.doc">Административный регламент</a></li>
+                  <li><a class="info_ul_href" href="http://xc.gati-online.ru/hs/z/zod2.php">Заявка</a></li>
+                  <li><a class="info_ul_href" href="http://gati-online.ru/docs/com/5.5.pdf">Как создать PSP файл (сайт РГИС)</a></li>
+                  <li><a class="info_ul_href" href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
+                  <li><a class="info_ul_href" href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
+                  <li><a class="info_ul_href" href="http://gati-online.ru/docs/z_s.doc">Согласование производства работ (владельцем)</a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&view=article&id=68&Itemid=93">Перечень действующих ордеров</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&view=article&id=87&Itemid=119">Архив Ордеров ГАТИ</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&view=article&id=135&Itemid=156">Список ордеров ГАТИ выданных за неделю</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&view=article&id=68&Itemid=93">Перечень действующих ордеров</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&view=article&id=87&Itemid=119">Архив Ордеров ГАТИ</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&view=article&id=135&Itemid=156">Список ордеров ГАТИ выданных за неделю</a></li>
                 </ul>
               </div>
             </div>
@@ -257,24 +257,24 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/docs/pravila.doc">Постановление Правительства Санкт-Петербурга от 06.10.2016 № 875</a></li>
-                  <li><a href="http://gati-online.ru/docs/reg96.doc">Административный регламент</a></li>
-                  <li><a href="http://gati-online.ru/docs/zap.docx">Заявка</a></li>
-                  <li><a href="http://gati-online.ru/docs/com/5.5.pdf">Как создать PSP файл (сайт РГИС)</a></li>
-                  <li><a href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
-                  <li><a href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/pravila.doc">Постановление Правительства Санкт-Петербурга от 06.10.2016 № 875</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/reg96.doc">Административный регламент</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/zap.docx">Заявка</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/com/5.5.pdf">Как создать PSP файл (сайт РГИС)</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=136&amp;Itemid=157">Банк планируемых работ</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=139&amp;Itemid=187">Оперативная адресная программа на 1-й Кв. 2021г.</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=94&amp;Itemid=187">Оперативная адресная программа на 2-й Кв. 2021г.</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=50&amp;Itemid=120">Система мониторинга</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=82&amp;Itemid=172">Перспективная адресная программа на 2020-2022г.г.</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=365&amp;Itemid=172">Проект ПАП на 2021-2023г.г.</a></li>
-                  <li><a href="http://gati-online.ru/monitoring_ap.xls">Мониторинг Исполнения Адресных Программ</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=122&amp;Itemid=143">Система планирования и координации работ</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=136&amp;Itemid=157">Банк планируемых работ</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=139&amp;Itemid=187">Оперативная адресная программа на 1-й Кв. 2021г.</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=94&amp;Itemid=187">Оперативная адресная программа на 2-й Кв. 2021г.</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=50&amp;Itemid=120">Система мониторинга</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=82&amp;Itemid=172">Перспективная адресная программа на 2020-2022г.г.</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=365&amp;Itemid=172">Проект ПАП на 2021-2023г.г.</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/monitoring_ap.xls">Мониторинг Исполнения Адресных Программ</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&amp;view=article&amp;id=122&amp;Itemid=143">Система планирования и координации работ</a></li>
                 </ul>
               </div>
             </div>
@@ -319,17 +319,17 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/docs/pdd.doc">Постановление Правительства Санкт-Петербурга от 27.03.2012 № 272</a></li>
-                  <li><a href="http://gati-online.ru/docs/reg131.doc">Административный регламент</a></li>
-                  <li><a href="http://gati-online.ru/docs/zots.doc">Заявка</a></li>
-                  <li><a href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
-                  <li><a href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/pdd.doc">Постановление Правительства Санкт-Петербурга от 27.03.2012 № 272</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/reg131.doc">Административный регламент</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/zots.doc">Заявка</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&view=article&id=76&Itemid=63">Ограничение движения на карте города</a></li>
-                  <li><a href="http://gati-online.ru/index.php?option=com_content&view=article&id=70&Itemid=64">Список распоряжений об ограничении движения</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&view=article&id=76&Itemid=63">Ограничение движения на карте города</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/index.php?option=com_content&view=article&id=70&Itemid=64">Список распоряжений об ограничении движения</a></li>
                 </ul>
               </div>
             </div>
@@ -373,15 +373,15 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://gati-online.ru/p_av.pdf">Как зарегистрироваться Владельцу сетей</a></li>
-                  <li><a href="http://gati-online.ru/docs/com/5.5.pdf">Как создать PSP файл (сайт РГИС)</a></li>
-                  <li><a href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
-                  <li><a href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/p_av.pdf">Как зарегистрироваться Владельцу сетей</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/com/5.5.pdf">Как создать PSP файл (сайт РГИС)</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/exc.exe">Программа для создания эл. подписи файла</a></li>
+                  <li><a  class="info_ul_href" href="http://gati-online.ru/docs/DOVER4.doc">Доверенность представлять интересы в ГАТИ </a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <ul class="info_ul">
-                  <li><a href="http://xc.gati-online.ru/hs/z/viewer.php">Просмотреть зарегистрированные уведомления</a></li>
+                  <li><a  class="info_ul_href" href="http://xc.gati-online.ru/hs/z/viewer.php">Просмотреть зарегистрированные уведомления</a></li>
                 </ul>
               </div>
             </div>
