--- a/test_index.html
+++ b/test_index.html
@@ -38,7 +38,7 @@
         </div>
         <nav class="menu__body">
           <ul class="menu__list">
-            <li class="link_active"><a href="#" class="menu__link">Главная</a></li>
+            <li class="link_active"><a href="#" class="menu__link main_link">Главная</a></li>
             <li class="drop__link">
               <span class="menu__link">Инспекция</span>
               <span class="menu__arrow"></span>
