апдейт для слепых

--- a/test_index.html
+++ b/test_index.html
@@ -195,13 +195,14 @@
             </div>
             
             <div class="row uslugi">
-              <div class="block-content-name">
-                <span>Услуги</span>
-              </div>
-            </div>
-            <div class="row">
 
+            </div>
+
+            <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
+                <div class="block-content-name _split">
+                  <span>Услуги</span>
+                </div>
                 <div class="sliderban_1">
                   <div class="slider _three" onclick="window.location='./gosuslugi/order.html#order'">
                       <div class="sl">
@@ -239,6 +240,9 @@
               </div>
 
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
+                <div class="block-content-name _split name_two">
+                  <span>Сервисы</span>
+                </div>
                 <div class="sliderban_1 slide_two">
                   <div class="slider _one" onclick="window.location='http://gati-online.ru/index.php?option=com_content&view=article&id=54&Itemid=81'">
                       <div class="sl">
@@ -357,7 +361,7 @@
       <div class="but-div">
         <div class="row block-content-service">
           <div>
-            <h3>Сервисы</h3>
+            <h3>Популярное</h3>
           </div>
         </div>
         <div class="row">
